text-overflow fixes in organization and user profiles

--- a/web/src/Pages/CompanyProfile/companyProfile.scss
+++ b/web/src/Pages/CompanyProfile/companyProfile.scss
@@ -49,8 +49,8 @@
   }
 
   .btn-activate {
-    color: #16B1FF !important;
-    border-color: #16B1FF !important;
+    color: #16b1ff !important;
+    border-color: #16b1ff !important;
   }
 
   .ant-btn[disabled] {
